--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "body-parser": "^1.18.3",
     "eslint": "^5.4.0",
     "express": "^4.16.3",
+    "pg": "^7.4.3",
+    "pg-hstore": "^2.3.2",
     "sequelize": "^4.38.0",
     "sqlite3": "^4.0.2",
     "underscore": "^1.9.1"
