--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha tests/**/*.test.js",
-    "test-watch": "nodemon --exec 'npm test'"
+    "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && mocha tests/**/*.test.js",
+    "test-watch": "nodemon --exec 'npm test'",
+    "start": "export NODE_ENV=test || SET \"NODE_ENV=test\" && nodemon index.js"
   },
   "author": "",
   "license": "ISC",
