--- a/package.json
+++ b/package.json
@@ -1,31 +1,33 @@
 {
-  "name": "simple-todo-api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && mocha tests/**/*.test.js",
-    "test-watch": "nodemon --exec 'npm test'",
-    "start": "export NODE_ENV=test || SET \"NODE_ENV=test\" && nodemon index.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^3.0.0",
-    "body-parser": "^1.18.3",
-    "crypto-js": "^3.1.9-1",
-    "eslint": "^5.4.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "expect": "^23.6.0",
-    "express": "^4.16.3",
-    "jsonwebtoken": "^8.3.0",
-    "mocha": "^5.2.0",
-    "pg": "^7.4.3",
-    "pg-hstore": "^2.3.2",
-    "sequelize": "^4.38.0",
-    "sqlite3": "^4.0.2",
-    "supertest": "^3.3.0",
-    "underscore": "^1.9.1"
-  }
+    "name": "simple-todo-api",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && mocha tests/**/*.test.js",
+        "test-watch": "nodemon --exec 'npm test'",
+        "start": "export NODE_ENV=test || SET \"NODE_ENV=test\" && nodemon index.js"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "bcrypt": "^3.0.0",
+        "body-parser": "^1.18.3",
+        "crypto-js": "^3.1.9-1",
+        "express": "^4.16.3",
+        "jsonwebtoken": "^8.3.0",
+        "pg": "^7.4.3",
+        "pg-hstore": "^2.3.2",
+        "sequelize": "^4.38.0",
+        "sqlite3": "^4.0.2",
+        "underscore": "^1.9.1"
+    },
+    "devDependencies": {
+        "eslint": "^5.4.0",
+        "eslint-config-airbnb-base": "^13.1.0",
+        "eslint-plugin-import": "^2.14.0",
+        "expect": "^23.6.0",
+        "supertest": "^3.3.0",
+        "mocha": "^5.2.0"
+    }
 }
